# Flask-MultiProfiler

./: Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/flask_multiprofiler/: __init__.py  ext.py  models.py  proxies.py  views.py
src/flask_multiprofiler/profilers/: __init__.py  base.py  code.py  sql.py
src/flask_multiprofiler/profilers/search/: __init__.py  profiler.py  renderer.py  stack_trace.py
src/flask_multiprofiler/profilers/search/templates/: partials.html  report.html  styles.css
src/flask_multiprofiler/templates/: index.html  report_macros.html
src/flask_multiprofiler/templates/profiler/: base.html  index.html
tests/: __init__.py  conftest.py  helpers.py  test_extension.py  test_profilers.py  test_views.py  testapp.py
tests/integration/: __init__.py  test_code_profiler.py  test_combined.py  test_search_profiler.py  test_sql_profiler.py  validation_helpers.py
